css/hjem.css
.hjem {
  background-color: transparent;
  border-color: transparent;
  transition: opacity 0.5s ease;
  transition: background-color 0.5s ease;
  border-color: blue;
}

.background-image {
  height: 78.3%;
  width: 100%;
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)),url(../bilder/index-background-image.jpg);
  background-position: center;
  background-size: cover;
  position: absolute;
}

.hjem:active {
  opacity: 0.75;
}

.mainpage {
  display: flex;
  height: 75%;
}

.box {
  background-color: transparent;
  margin-left: 25%;
  width: 50%;
  margin-right: 25%;
  display: block;
}

.velkommen {
  margin-top: 30px;
  text-align: center;
  display: block;
  height: 20px;
  font-weight: bold;
  color: white;
  font-size: 3rem;
  margin-bottom: 50px;
  font-family: Alumni Sans;
}

.velkommen-tekst {
  margin-top: 35px;
  text-align: center;
  display: block;
  height: 20px;
  font-weight: bold;
  color: white;
  font-family: Alumni Sans;
  font-size: 1.5rem;
}

.se-hva {
  background-color: rgb(101, 208, 193);
  margin-top: 2rem;
  border: none;
  border-radius: 4px;
  font-family: Alumni Sans;
  font-size: 1.2rem;
}

.div-im-knapp {
  display: flex;
  justify-content: center;
}

.se-hva:hover {
  background-color: rgb(101, 208, 193);
  opacity: 1;
  color: black;
}

button a span:hover {
  color: black;
}

/* PHONE SUPPORT */

@media only screen and (max-width: 767px) {
  .box {
    margin-left: 2.5%;
    width: 95%;
    line-height: 140%;
    height: 60%;
  }

  .velkommen {
    margin-left: 25%;
    line-height: 120%;
  }

  .velkommen-tekst {
    margin-left: 25%;
    line-height: 120%;
    height: 17%;
  }

  .background-image {
    height: 60%;
  }

  .div-im-knapp {
    margin-left: 25%;
    margin-top: 20%;
  }
}

/* DESKTOP SUPPORT */

@media only screen and (max-width: 2560px) {
  .background-image {
    height: 88%;
  }
}

